--- a/src/styles/Components/Autorize/_autorize.scss
+++ b/src/styles/Components/Autorize/_autorize.scss
@@ -1,4 +1,4 @@
-.auth-container {
+section.auth-container {
     position: absolute;
     display: flex;
     align-items: center;
@@ -7,92 +7,112 @@
     justify-content: center;
     flex-direction: column;
 
-    & > h2 {
-        margin-bottom: 20px;
-        font-family: 'Courier New', Courier, monospace;
-        font-size: xx-large;
-        font-weight: 600;
-        color: white;
-        transition: color .5s;
-    }
-
-   
-}
-
-#auth-form {
-    padding-bottom: 15px;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
-
-    #reg-link {
-        cursor: pointer;
-        margin-top: 10px;
-        text-align: center;
-        color: white;
-        text-decoration: dotted;
-        transition: all .2s;
-
-        & > span {
-            font-weight: 1000;
-            color: wheat;
-            font-family: 'Courier New', Courier, monospace;
-        }
-
-        &:hover {
-            transform: scale(1.03);
-        }
-    }
-
-    & > div > input[type="checkbox"] {
-        appearance: none;
-        width: 20px;
-        height: 20px;
-        border: 2px solid #555;
-        border-radius: 4px;
-        cursor: pointer;
-        position: relative;
-        border-color: white ;
-
-        &:checked {
-            background-color: #4CAF50;
-            border-color: #4CAF50;
-        }
-
-        &:checked::before {
-            content: "✓";
-            color: white;
-            font-size: 14px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    }
-
-    & > #checkbox-container {
+    form#auth-form {
+        width: 90dvw;
         display: flex;
+        flex-direction: column;
+        height: 510px;
         align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 500px;
         padding: 10px;
-        margin-bottom: 10px;
-        gap: 10px;
+        // background-image: linear-gradient(930deg,  var(--button-hover-start), var(--bg-color-start))
+        // transition: --button-hover-start 0.4s, --bg-color-start .1s
+        background: url(/bg-01.jpg);
+        border-radius: 20px;
+        border: 2px black solid;
+        box-shadow: 5px 5px 0 var(--main-color);
+        transition: --main-color .4s .2s;
 
-        & > input[type=checkbox] {
-            transition: transform .3s;
+        & > legend {
+            margin-bottom: 25px;
+            text-align: center;
+            width: 55%;
+            border-bottom: 3px black dashed;
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: xx-large;
+            font-weight: 600;
+        }
 
-            &:hover {
-                transform: scale(1.09);
+        & > .pretty_input {
+            text-overflow: ellipsis;
+            width: 70%;
+        }
+
+        & > button {
+            margin-top: 15px;
+            width:280px;
+        }
+
+        & > #checkbox-container {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            margin-bottom: 10px;
+            gap: 10px;
+            
+            & > label {
+                transition: color .7s;
+                color: white;
+                font-family: 'Courier New', Courier, monospace;
+                font-weight: 800;
+            }
+
+            & > input[type=checkbox] {
+                transition: transform .3s;
+                appearance: none;
+                width: 20px;
+                height: 20px;
+                border: 2px solid #555;
+                border-radius: 4px;
+                cursor: pointer;
+                position: relative;
+                border-color: white ;
+
+                &:checked {
+                    background-color: #4CAF50;
+                    border-color: #4CAF50;
+                }
+
+                &:checked::before {
+                    content: "✓";
+                    color: white;
+                    font-size: 14px;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
+
+                &:hover {
+                    transform: scale(1.09);
+                }
             }
         }
-
-        & > label {
-            transition: color .7s;
-            color: white;
-            font-family: 'Courier New', Courier, monospace;
-            font-weight: 800;
-        }
     }
+    
+    #reg-link {
+    cursor: pointer;
+    margin-top: 30px;
+    text-align: center;
+    padding: 5px;
+    color: white;
+    text-decoration: dotted;
+    transition: all .2s;
+    border-top: 2px  dashed black;
+    border-bottom: 2px  dashed black;
+
+    & > span {
+        font-weight: 1000;
+        color: wheat;
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    &:hover {
+        transform: scale(1.03);
+    }
+}
+
 }
