--- a/src/styles/Base/_root.scss
+++ b/src/styles/Base/_root.scss
@@ -52,7 +52,7 @@ initial-value: #ff8aa5;
   --bg-color-stop:black;  
   --button-color-start: #ff00e6;
   --button-color-stop: #4400ff;
-  --button-hover-start:#23a085; 
+  --button-hover-start:#19eec0; 
   --button-hover-stop: #ffa500;
   --main-color: #ff1fce;
 }
