--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,9 +3,11 @@
 @use './Base/base';
 
 // Using Components
-@use './Components/Autorize/autorize';
-@use './Components/ThemeSwitcher/switcher';
-@use './Components/Registration/registration';
-@use './Components/ShowForm/showForm';
-@use './Components/TeacherLout/teachLout';
 @use './Components/UserProfile/userProfile';
+@use './Components/ThemeSwitcher/switcher';
+
+//using pages
+@use './Pages/Registration/registration';
+@use './Pages/StudentNavigator/StudentNavigator';
+@use './Pages/TeacherLout/teachLout';
+@use './Pages/Autorize/autorize'
