--- a/src/styles/Pages/Registration/_registration.sass
+++ b/src/styles/Pages/Registration/_registration.sass
@@ -1,6 +1,6 @@
 @use '../../Base/mixins' as *
     
-.registration-container 
+main.registration-container 
     display: flex
     align-items: center
     justify-content: center
@@ -119,8 +119,9 @@
         width: 90dvw
         display: flex
         flex-direction: column
-        height: 610px
+        height: 650px
         align-items: center
+        justify-content: center
         position: relative
         width: 500px
         padding: 10px
