--- a/src/styles/Base/_root.scss
+++ b/src/styles/Base/_root.scss
@@ -22,7 +22,7 @@ initial-value: #ff8aa5;
 @property --button-color-stop {
   syntax: '<color>';
   inherits: true;
-  initial-value: #4ecdc4;
+  initial-value: #14dcb0;
 }
 
 @property --button-hover-start {
