--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,4 +10,5 @@
 @use './Pages/Registration/registration';
 @use './Pages/StudentNavigator/StudentNavigator';
 @use './Pages/TeacherLout/teachLout';
-@use './Pages/Autorize/autorize'
+@use './Pages/Autorize/autorize';
+@use './Pages/FormShow/formshow';
