--- a/src/styles/Pages/FormShow/_formshow.scss
+++ b/src/styles/Pages/FormShow/_formshow.scss
@@ -42,7 +42,9 @@ main.showform__container {
         }
 
         section {
-            width: 100dvw;
+            border-bottom: dashed white 2px;
+            border-top: dashed white 2px;
+            width: 650px;
             display: flex;
             flex-direction: column;
             align-items: center;
