--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -689,7 +689,7 @@ main.studentnavigator__container #studentnavigator__form {
   border-radius: 20px;
   border: 2px black solid;
   box-shadow: 5px 5px 0 var(--main-color);
-  transition: --main-color 0.4s 0.2s;
+  transition: --main-color 0.4s 0.15s;
   height: 300px;
 }
 main.studentnavigator__container #studentnavigator__form > legend {
@@ -746,7 +746,7 @@ main.auth-container form#auth-form {
   border-radius: 20px;
   border: 2px black solid;
   box-shadow: 5px 5px 0 var(--main-color);
-  transition: --main-color 0.4s 0.2s;
+  transition: --main-color 0.4s 0.15s;
 }
 main.auth-container form#auth-form > legend {
   margin-bottom: 40px;
@@ -868,7 +868,9 @@ main.showform__container form button {
   width: 175px;
 }
 main.showform__container form section {
-  width: 100dvw;
+  border-bottom: dashed white 2px;
+  border-top: dashed white 2px;
+  width: 650px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -894,7 +896,7 @@ main.showform__container form section > article {
   border-radius: 20px;
   border: 2px black solid;
   box-shadow: 5px 5px 0 var(--main-color);
-  transition: --main-color 0.4s 0.2s;
+  transition: --main-color 0.4s 0.15s;
   height: -moz-fit-content;
   height: fit-content;
   align-items: baseline;
