--- a/src/styles/Pages/Registration/_registration.sass
+++ b/src/styles/Pages/Registration/_registration.sass
@@ -22,6 +22,8 @@ main.registration-container
         outline: none
         width: 300px
         height: 85px
+        &::backdrop
+            backdrop-filter: blur(20px)
 
         *
             outline: none
