start developing create form page

--- a/src/styles/Pages/Registration/_registration.sass
+++ b/src/styles/Pages/Registration/_registration.sass
@@ -97,28 +97,28 @@ main.registration-container
             
             
         fieldset
-            border: 2px black solid
+            border: 3px black solid
             display: flex
-            align-items: center 
             background: white
             margin-bottom: 20px
             margin-top: 5px
             border-radius: 10px
+            height: 40px
             justify-content: center
+            align-content: center
+            align-items: center
             
             div
                 display: flex
                 align-items: center
                 justify-content: space-around
                 width: 70%
-                position: relative
-
-                input
-                    height: 40px
+                margin-top: 10px
+                
 
                 label
                     font-family: 'Courier New', Courier, monospace
-                    font-weight: 600
+                    font-weight: 600    
 
 
         button 
