--- a/src/styles/Base/_base.scss
+++ b/src/styles/Base/_base.scss
@@ -93,6 +93,7 @@ body {
   padding: 20px;
   box-sizing: border-box;
   transition: all .7s;
+  font-family: 'Times New Roman', Times, serif;
   position: relative;
   transition: box-shadow 0.3s, transform 0.3s;
 
@@ -117,6 +118,7 @@ body {
 
   &::placeholder {
     font-size: large;
+    font-weight: 500;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: gray ;
     transition: transform .3s;
@@ -267,9 +269,49 @@ aside {
   margin-left: 10px;
 }
 
-.main_radio {
-  scale: 1.5;
-}
+
+// input[type="radio"] {
+//   /* Add if not using autoprefixer */
+//   -webkit-appearance: none;
+//   /* Remove most all native input styles */
+//   appearance: none;
+//   /* For iOS < 15 */
+//   background-color: var(--form-background);
+//   /* Not removed via appearance */
+//   margin: 0;
+
+//   font: inherit;
+//   color: currentColor;
+//   width: 1.15em;
+//   height: 1.15em;
+//   border: 0.15em solid currentColor;
+//   border-radius: 50%;
+//   transform: translateY(-0.075em);
+
+//   display: grid;
+//   place-content: center;
+// }
+
+// input[type="radio"]::before {
+//   content: "";
+//   width: 0.65em;
+//   height: 0.65em;
+//   border-radius: 50%;
+//   transform: scale(0);
+//   transition: 120ms transform ease-in-out;
+//   box-shadow: inset 1em 1em var(--form-control-color);
+//   /* Windows High Contrast Mode */
+//   background-color: CanvasText;
+// }
+
+// input[type="radio"]:checked::before {
+//   transform: scale(1);
+// }
+
+// input[type="radio"]:focus {
+//   outline: max(2px, 0.15em) solid currentColor;
+//   outline-offset: max(2px, 0.15em);
+// }
 
 @keyframes shake {
   0%, 100% { transform: translateX(0); }
