--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -157,6 +157,7 @@ body {
   padding: 20px;
   box-sizing: border-box;
   transition: all 0.7s;
+  font-family: "Times New Roman", Times, serif;
   position: relative;
   transition: box-shadow 0.3s, transform 0.3s;
 }
@@ -177,6 +178,7 @@ body {
 }
 .pretty_input::-moz-placeholder {
   font-size: large;
+  font-weight: 500;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: gray;
   -moz-transition: transform 0.3s;
@@ -184,6 +186,7 @@ body {
 }
 .pretty_input::placeholder {
   font-size: large;
+  font-weight: 500;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: gray;
   transition: transform 0.3s;
@@ -317,10 +320,6 @@ aside > svg:hover {
   margin-top: 5px;
   z-index: 10;
   margin-left: 10px;
-}
-
-.main_radio {
-  scale: 1.5;
 }
 
 @keyframes shake {
@@ -644,24 +643,23 @@ main.registration-container #registration-form legend {
   font-weight: 600;
 }
 main.registration-container #registration-form fieldset {
-  border: 2px black solid;
+  border: 3px black solid;
   display: flex;
-  align-items: center;
   background: white;
   margin-bottom: 20px;
   margin-top: 5px;
   border-radius: 10px;
+  height: 40px;
   justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 main.registration-container #registration-form fieldset div {
   display: flex;
   align-items: center;
   justify-content: space-around;
   width: 70%;
-  position: relative;
-}
-main.registration-container #registration-form fieldset div input {
-  height: 40px;
+  margin-top: 10px;
 }
 main.registration-container #registration-form fieldset div label {
   font-family: "Courier New", Courier, monospace;
