--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,4 @@
 @use './Pages/TeacherLout/teachLout';
 @use './Pages/Autorize/autorize';
 @use './Pages/FormShow/formshow';
+@use './Pages/CreateForm/createForm'
